cluster/apps/home/home-assistant/httproute-codeserver.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-codeserver
  namespace: home
  annotations:
    hajimari.io/appName: "Hass Config"
    hajimari.io/icon: cib:visual-studio-code
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: networking
    sectionName: https
  hostnames:
  - "hass-config.${SECRET_CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: home-assistant-codeserver
      port: 8080
