cluster/apps/home/home-assistant/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home
  annotations:
    hajimari.io/icon: mdi:home-assistant
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: networking
  hostnames:
  - "hass.${SECRET_CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 8443
        statusCode: 301
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: home-assistant
      port: 8123
