cluster/apps/home/home-assistant/security-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: codeserver-whitelist
  namespace: home
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: home-assistant-codeserver
  authorization:
    defaultAction: Deny
    rules:
    - action: Allow
      name: allow-internal
      principal:
        clientCIDRs:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
